2019-08-13  Ajay Saini  <sainiak@uci.edu>

    * git tag -a 1.0 -m 'Whale Shark: Stable, long-term release'; git push --tags

2019-08-13  Ajay Saini  <sainiak@uci.edu>

    * nsidc: Calculate time as 'seconds since 1900-01-01' for files having starting year prior to 1970

    * nsidc2nc: Divide variables by 10 having scaling factor of 10

    * common.py: Check if network is "nsidc" before updating time units

    * git tag -a 0.9.3 -m 'alpha03: Correct time for NSIDC files prior to 1970'; git push --tags

2019-08-13  Ajay Saini  <sainiak@uci.edu>

    * Include jaws/resources/nsidc/* in MANIFEST.in

    * git tag -a 0.9.2 -m 'alpha02: Add NSIDC files to MANIFEST.in'; git push --tags

2019-08-11  Ajay Saini  <sainiak@uci.edu>

    * git tag -a 0.9.1 -m 'alpha01: Add new network NSIDC'; git push --tags

2019-08-10  Ajay Saini  <sainiak@uci.edu>

    * nsidc2nc: Script to convert NSIDC stations to netCDF format

2019-07-17  Ajay Saini  <sainiak@uci.edu>

    * git tag -a 0.9 -m 'Great Hammerhead Shark: Correct time variable for SCAR'; git push --tags

2019-07-16  Ajay Saini  <sainiak@uci.edu>

    * scar2nc: Correct time and time_bounds as values are instantaneous

2019-06-30  Ajay Saini  <sainiak@uci.edu>

    * Add exceptions for new stations

    * Add exception and hint for metpy.units(pint) ImportError

    * Correct KeyError syntax for Python 3

2019-05-23  Ajay Saini  <sainiak@uci.edu>

    * Work on PROMICE monthly input files

2019-05-17  Ajay Saini  <sainiak@uci.edu>

    * Debug IMAU files

2019-05-16  Ajay Saini  <sainiak@uci.edu>

    * Debug IMAU files

    * git tag -a 0.8.5 -m 'beta02: PROMICE v03 support'; git push --tags

2019-05-15  Ajay Saini  <sainiak@uci.edu>

    * Add --hPa option to convert pressure units

2019-05-14  Ajay Saini  <sainiak@uci.edu>

    * Streamline Appveyor testing

2019-05-13  Ajay Saini  <sainiak@uci.edu>

    * jaws.py: Change method to detect POLENET and SCAR files

    * docs: Update note about POLENET and SCAR files
