@@ -17,5 +17,4 @@ docs/build/
 bav/metadata
 *-checkpoint.md
 hs_adjust.py
-untitled.md
-NUK_K_hour_v03.txt
+jaws/gcnet_data
