@@ -25,7 +25,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build scipy requests
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pandas numpy xarray pytz netCDF4 conda-build scipy requests nead
   - source activate test-environment
   #- conda build conda.recipe
   #- conda install -n test-environment --use-local jaws
