@@ -20,6 +20,7 @@ requirements:
     - scipy
     - requests
     - metpy
+    - nead
   run:
     - python
     - pandas
@@ -31,6 +32,7 @@ requirements:
     - scipy
     - requests
     - metpy
+    - nead
 
 about:
   home: https://github.com/jaws/jaws
