@@ -249,18 +249,6 @@
     "zlib": true,
     "complevel": "COMP"
   },
-  "wspd_2m": {
-    "_FillValue": "FILL",
-    "dtype": "f4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "wspd_10m": {
-    "_FillValue": "FILL",
-    "dtype": "f4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
   "wind_sensor_height_1": {
     "_FillValue": "FILL",
     "dtype": "f4",
@@ -282,161 +270,6 @@
   "zenith_angle": {
     "_FillValue": "FILL",
     "dtype": "f4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc1": {
-    "dtype": "i4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc9": {
-    "dtype": "i4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc17": {
-    "dtype": "i4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc25": {
-    "dtype": "i4",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_swdn": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_swup": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_netradiation": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_ttc1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_ttc2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tcs1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tcs2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_rh1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_rh2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_u1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_u2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_ud1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_ud2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_pressure": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_snowheight1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_snowheight2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow1": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow2": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow3": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow4": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow5": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow6": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow7": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow8": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow9": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_tsnow10": {
-    "dtype": "i1",
-    "zlib": true,
-    "complevel": "COMP"
-  },
-  "qc_battery": {
-    "dtype": "i1",
     "zlib": true,
     "complevel": "COMP"
   },
