@@ -1,0 +1,98 @@
+# NEAD 1.0 UTF-8
+# [METADATA]
+# doi = https://doi.org/10.16904/envidat.1
+# reference = "Steffen, K. (2020). Greenland Climate Network (GC-Net) Data. EnviDat. doi: doi:10.16904/envidat.1"
+# station_id = 803064FE
+# station_num = 8
+# station_name = GC-NET GOES station Dye-II
+# srid = EPSG:4326
+# geometry = POINTZ (-46.29078 66.48197 2165)
+# nodata = -999
+# timestamp_meaning = end
+# timezone = 0
+# field_delimiter = ,
+# 
+# [FIELDS]
+# fields = timestamp,ISWR,ISWR_max,OSWR,OSWR_min,NSWR,NSWR_max,TA1,TA1_max,TA1_min,TA2,TA2_max,TA2_min,TA3,TA4,RH1,RH2,VW1,VW1_max,VW1_stdev,VW2,VW2_max,VW2_stdev,DW1,DW2,P,HS1,HS2,V,TA5
+# add_value = 0,0,0,0,0,0,0,273.15,273.15,273.15,273.15,273.15,273.15,273.15,273.15,0,0,0,0,0,0,0,0,0,0,0,0,0,0,273.15
+# scale_factor = 1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0.01,0.01,1,1,1,1,1,1,1,1,100,1,1,1,1
+# units = time,W/m2,W/m2,W/m2,W/m2,W/m2,W/m2,Degrees C,Degrees C,Degrees C,Degrees C,Degrees C,Degrees C,Degrees C,Degrees C,%,%,m/s,m/s,m/s,m/s,m/s,m/s,Degrees,Degrees,mbar,m,m,V,Degrees C
+# display_description = timestamp_iso,shortwave_incoming_radiation,shortwave_incoming_radiation_max,shortwave_outgoing_radiation,shortwave_outgoing_radiation_min,net_radiation,net_radiation_max,air_temperature_1,air_temperature_1_max,air_temperature_1_min,air_temperature_2,air_temperature_2_max,air_temperature_2_min,air_temperature_cs500_air1,air_temperature_cs500_air2,relative_humidity_1,relative_humidity_2,wind_speed_1,wind_speed_u1_max,wind_speed_u1_stdev,wind_speed_2,wind_speed_u2_max,wind_speed_u2_stdev,wind_from_direction_1,wind_from_direction_2,air_pressure,snow_depth_1,snow_depth_2,battery_voltage,ref_temperature
+# database_fields = timestamp_iso,swin,swin_maximum,swout,swout_minimum,netrad,netrad_maximum,airtemp1,airtemp1_maximum,airtemp1_minimum,airtemp2,airtemp2_maximum,airtemp2_minimum,airtemp_cs500air1,airtemp_cs500air2,rh1,rh2,windspeed1,windspeed_u1_maximum,windspeed_u1_stdev,windspeed2,windspeed_u2_maximum,windspeed_u2_stdev,winddir1,winddir2,pressure,sh1,sh2,battvolt,reftemp
+# database_fields_data_types = timestamp,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real,real
+# 
+# [DATA]
+# 
+# 
+2015-08-14 00:00:00+00:00,6.0,16.2,4.48,-999,-2.92,0.23,-10.28,-999,-9.92,-10.3,-999,-9.94,-10.1,-10.17,104.72,-999,0.79,-11.02,1.72,0.0,-11.04,0.0,177.5,181.9,982.1,-999,0.75,13.57,0.35
+2015-08-14 01:00:00+00:00,1.2,2.6,0.56,-999,-2.27,0.3,-10.65,-999,-10.54,-10.67,-999,-10.55,-10.53,-10.63,104.53,-999,1.06,-11.25,2.3,0.0,-11.27,0.0,149.3,151.6,982.0,-999,0.75,13.45,0.43
+2015-08-14 02:00:00+00:00,1.2,1.4,0.19,-999,-2.72,0.67,-11.2,-999,-10.58,-11.22,-999,-10.61,-11.05,-11.1,103.98,-999,1.83,-12.39,3.26,0.0,-12.41,0.0,190.7,190.1,982.0,-999,0.75,13.36,0.46
+2015-08-14 03:00:00+00:00,1.0,1.4,0.19,-999,-2.53,0.94,-11.73,-999,-11.44,-11.74,-999,-11.46,-11.6,-11.64,103.8,-999,1.68,-12.64,2.71,0.0,-12.65,0.0,183.7,182.1,982.0,-999,0.75,13.27,0.4
+2015-08-14 04:00:00+00:00,1.0,1.4,0.19,-999,-3.06,0.98,-12.25,-999,-11.94,-12.25,-999,-11.97,-12.08,-12.13,103.42,-999,2.1,-13.3,2.94,0.0,-13.28,0.0,168.3,167.1,981.8,-999,0.75,13.19,0.31
+2015-08-14 05:00:00+00:00,0.8,1.4,0.37,-999,-7.18,1.24,-13.89,-999,-12.67,-13.84,-999,-12.64,-13.61,-13.64,102.83,-999,2.44,-15.52,3.17,0.0,-15.45,0.01,157.8,157.5,981.5,-999,0.75,13.11,0.28
+2015-08-14 06:00:00+00:00,1.2,2.0,0.56,-999,-7.82,2.31,-15.95,-999,-14.6,-15.9,-999,-14.58,-15.64,-15.63,102.63,-999,1.6,-19.29,2.33,0.0,-19.1,0.01,164.6,165.8,981.4,-999,0.74,13.03,0.33
+2015-08-14 07:00:00+00:00,15.4,47.8,9.53,-999,5.22,14.89,-19.55,-999,-18.52,-19.4,-999,-18.34,-19.23,-19.17,102.51,-999,1.27,-20.87,1.41,0.0,-20.81,0.01,161.5,160.8,981.5,-999,0.74,12.97,0.06
+2015-08-14 08:00:00+00:00,85.8,131.2,62.39,-999,44.37,6.46,-20.05,-999,-19.77,-20.04,-999,-19.85,-19.27,-19.41,100.36,-999,1.3,-21.44,1.48,0.13,-21.3,1.1,158.3,158.9,981.3,-999,0.74,13.07,0.06
+2015-08-14 09:00:00+00:00,181.0,234.2,148.32,-999,42.9,7.19,-19.88,-999,-19.49,-20.06,-999,-19.74,-18.88,-19.22,98.83,-999,1.15,-21.06,1.4,0.55,-21.19,2.37,163.8,164.3,981.1,-999,0.74,13.65,0.08
+2015-08-14 10:00:00+00:00,288.0,333.8,245.27,-999,-1.48,17.59,-18.57,-999,-17.69,-18.82,-999,-17.79,-17.32,-17.92,96.65,-999,1.12,-20.33,1.28,0.56,-20.58,2.11,156.7,157.1,981.3,-999,0.74,14.37,0.05
+2015-08-14 11:00:00+00:00,364.8,404.4,341.47,-999,-84.73,22.36,-16.34,-999,-14.7,-16.57,-999,-14.83,-15.07,-15.73,95.58,-999,1.22,-18.43,4.6,0.93,-18.55,2.74,152.2,152.3,981.1,-999,0.74,14.74,0.67
+2015-08-14 12:00:00+00:00,444.2,483.6,427.77,-999,-184.18,22.39,-14.14,-999,-13.35,-14.54,-999,-13.84,-12.72,-13.45,93.43,-999,4.3,-15.34,5.16,0.79,-15.49,2.75,159.7,158.7,981.0,-999,0.74,13.76,0.3
+2015-08-14 13:00:00+00:00,530.4,577.0,494.83,-999,-277.77,20.24,-12.52,-999,-11.67,-12.92,-999,-11.97,-11.37,-11.91,93.34,-999,4.61,-13.98,5.54,0.93,-14.5,3.03,167.8,166.7,981.0,-999,0.74,13.61,0.37
+2015-08-14 14:00:00+00:00,616.8,634.8,537.8,-999,-251.14,22.81,-10.14,-999,-8.71,-10.46,-999,-9.0,-9.02,-9.4,92.5,-999,4.09,-12.13,4.99,2.14,-12.44,2.9,170.5,168.8,980.7,-999,0.74,13.49,0.37
+2015-08-14 15:00:00+00:00,646.6,654.2,559.09,-999,-224.51,8.17,-8.2,-999,-7.42,-8.46,-999,-7.58,-7.02,-7.19,90.28,-999,3.5,-9.28,4.31,1.47,-9.51,2.57,178.9,176.9,980.6,-999,0.74,13.41,0.31
+2015-08-14 16:00:00+00:00,651.6,654.8,558.35,-999,-197.88,48.75,-7.02,-999,-6.64,-7.08,-999,-6.72,-5.86,-5.73,88.49,-999,2.82,-7.85,3.5,0.41,-7.96,1.57,185.9,183.8,980.6,-999,0.74,13.44,0.28
+2015-08-14 17:00:00+00:00,627.6,644.8,532.75,-999,-171.25,13.05,-6.41,-999,-6.15,-6.71,-999,-6.48,-5.19,-5.36,85.47,-999,2.45,-7.13,3.03,0.26,-7.3,1.15,179.2,177.5,980.4,-999,0.74,14.08,0.22
+2015-08-14 18:00:00+00:00,574.0,607.2,482.5,-999,-198.03,7.25,-6.52,-999,-6.31,-6.68,-999,-6.57,-5.59,-5.79,86.56,-999,3.19,-7.09,4.13,0.87,-7.13,2.33,154.1,152.2,980.4,-999,0.74,14.25,0.32
+2015-08-14 19:00:00+00:00,493.6,548.6,410.03,-999,-206.34,6.08,-7.0,-999,-6.77,-7.08,-999,-6.8,-6.36,-6.49,87.44,-999,3.52,-7.54,4.06,1.18,-7.62,2.23,159.1,157.3,980.3,-999,0.74,14.25,0.2
+2015-08-14 20:00:00+00:00,416.8,480.0,339.79,-999,-211.3,3.31,-7.78,-999,-7.22,-7.61,-999,-7.27,-7.3,-6.99,89.79,-999,3.02,-8.75,3.77,0.58,-8.54,1.94,174.7,172.8,980.4,-999,0.74,14.13,0.33
+2015-08-14 21:00:00+00:00,293.4,363.0,232.94,-999,-200.8,10.68,-9.42,-999,-8.38,-9.22,-999,-8.21,-8.84,-8.8,90.68,-999,3.43,-11.02,3.81,1.61,-10.85,2.33,165.4,164.5,980.3,-999,0.73,14.04,0.13
+2015-08-14 22:00:00+00:00,136.6,251.4,140.85,-999,-164.21,21.68,-11.5,-999,-10.09,-11.25,-999,-9.77,-10.97,-10.91,93.39,-999,3.49,-13.52,4.15,1.72,-13.19,2.44,159.2,159.5,980.3,-999,0.73,13.91,0.19
+2015-08-14 23:00:00+00:00,41.0,96.2,30.64,-999,-61.98,17.38,-14.24,-999,-11.32,-13.87,-999,-10.89,-13.94,-13.64,100.43,-999,4.26,-17.51,5.17,1.09,-17.26,3.14,156.9,155.9,980.2,-999,0.73,13.72,0.37
+2015-08-15 00:00:00+00:00,5.6,10.8,4.86,-999,-31.34,2.33,-16.98,-999,-15.95,-16.64,-999,-15.54,-17.04,-16.73,106.37,-999,4.82,-18.33,5.32,1.68,-18.11,3.3,148.8,148.1,980.0,-999,0.73,13.56,0.2
+2015-08-15 01:00:00+00:00,1.0,2.0,0.19,-999,-25.34,1.4,-17.66,-999,-16.48,-17.36,-999,-16.19,-17.61,-17.31,106.32,-999,4.98,-19.42,5.34,0.59,-19.24,3.12,148.8,147.6,980.0,-999,0.73,13.45,0.16
+2015-08-15 02:00:00+00:00,0.8,1.4,0.19,-999,-21.01,0.6,-18.97,-999,-18.4,-18.74,-999,-18.11,-18.94,-18.71,105.84,-999,5.26,-20.37,5.99,0.07,-20.23,0.83,148.4,147.6,979.8,-999,0.73,13.36,0.24
+2015-08-15 03:00:00+00:00,0.8,1.4,0.19,-999,-18.61,0.54,-19.14,-999,-18.3,-18.96,-999,-18.03,-19.15,-18.97,106.33,-999,5.3,-20.7,6.03,0.11,-20.57,1.7,144.2,143.8,979.5,-999,0.73,13.26,0.24
+2015-08-15 04:00:00+00:00,0.8,1.4,0.19,-999,-18.0,0.63,-18.3,-999,-16.57,-18.15,-999,-16.38,-18.29,-18.17,107.01,-999,5.65,-20.31,6.33,0.05,-20.21,0.74,147.4,147.0,979.4,-999,0.73,13.16,0.34
+2015-08-15 05:00:00+00:00,0.8,1.4,0.19,-999,-15.14,0.58,-18.92,-999,-18.39,-18.8,-999,-18.25,-18.91,-18.8,105.92,-999,5.36,-20.47,6.36,0.03,-20.34,0.15,153.7,152.3,979.2,-999,0.73,13.07,0.31
+2015-08-15 06:00:00+00:00,1.2,2.6,0.56,-999,-13.11,0.61,-18.25,-999,-17.62,-18.11,-999,-17.49,-18.23,-18.11,105.48,-999,5.21,-19.43,6.28,0.06,-19.28,0.24,156.7,156.7,979.1,-999,0.73,12.99,0.43
+2015-08-15 07:00:00+00:00,11.0,32.4,7.1,-999,7.19,20.13,-20.02,-999,-18.54,-19.92,-999,-18.4,-19.94,-19.82,104.69,-999,5.27,-21.56,6.41,0.13,-21.48,0.63,152.4,151.5,979.0,-999,0.73,12.92,0.5
+2015-08-15 08:00:00+00:00,75.8,131.2,52.49,-999,70.81,11.89,-18.27,-999,-17.02,-18.14,-999,-16.87,-18.18,-17.96,104.22,-999,5.5,-20.66,6.32,0.36,-20.56,2.16,155.3,154.1,978.9,-999,0.73,13.68,0.25
+2015-08-15 09:00:00+00:00,189.8,239.6,135.62,-999,83.7,4.27,-17.72,-999,-16.85,-17.61,-999,-16.75,-17.42,-17.21,102.03,-999,5.72,-19.59,6.36,0.32,-19.51,2.17,150.0,149.0,978.7,-999,0.73,14.78,0.25
+2015-08-15 10:00:00+00:00,285.4,331.6,227.15,-999,49.91,13.87,-16.58,-999,-15.33,-16.5,-999,-15.25,-16.23,-16.01,100.82,-999,6.14,-18.71,7.0,1.43,-18.64,3.57,151.9,150.9,978.8,-999,0.73,13.94,0.36
+2015-08-15 11:00:00+00:00,381.4,431.8,322.04,-999,-10.91,18.13,-14.55,-999,-14.08,-14.51,-999,-14.11,-14.06,-13.87,99.17,-999,6.29,-15.96,7.34,2.68,-15.89,4.03,156.8,157.2,978.6,-999,0.73,13.76,0.35
+2015-08-15 12:00:00+00:00,472.2,508.4,415.44,-999,-75.21,9.79,-13.53,-999,-12.73,-13.59,-999,-12.79,-12.99,-12.93,97.01,-999,6.49,-14.9,7.84,3.36,-14.94,4.4,152.7,152.2,978.7,-999,0.73,13.65,0.42
+2015-08-15 13:00:00+00:00,547.2,581.8,480.82,-999,-55.36,22.7,-11.39,-999,-9.84,-11.52,-999,-10.08,-10.76,-10.75,92.74,-999,5.75,-13.27,6.91,2.79,-13.34,4.17,151.2,150.3,978.8,-999,0.73,13.53,0.39
+2015-08-15 14:00:00+00:00,607.2,629.4,528.27,-999,-0.87,7.43,-8.6,-999,-7.72,-8.79,-999,-7.88,-8.11,-8.19,87.18,-999,5.57,-10.22,6.65,2.4,-10.49,3.69,157.7,155.2,978.6,-999,0.73,13.45,0.46
+2015-08-15 15:00:00+00:00,641.2,648.8,552.55,-999,-46.86,11.79,-7.19,-999,-6.6,-7.33,-999,-6.72,-6.51,-6.61,84.07,-999,4.8,-8.17,5.63,1.6,-8.31,3.1,162.8,160.4,978.6,-999,0.73,13.45,0.38
+2015-08-15 16:00:00+00:00,646.6,649.4,551.99,-999,-100.4,13.62,-6.09,-999,-5.61,-6.19,-999,-5.79,-5.28,-5.38,82.09,-999,4.22,-6.93,5.47,1.81,-7.05,2.93,171.2,169.9,978.5,-999,0.73,13.49,0.41
+2015-08-15 17:00:00+00:00,623.4,640.0,526.96,-999,-156.71,11.64,-5.32,-999,-5.12,-5.58,-999,-5.4,-4.33,-4.88,81.76,-999,3.74,-5.89,5.01,1.52,-6.06,2.82,155.5,153.5,978.5,-999,0.73,14.12,0.35
+2015-08-15 18:00:00+00:00,572.4,601.8,479.14,-999,-195.03,6.87,-5.27,-999,-5.12,-5.45,-999,-5.38,-4.29,-4.72,82.79,-999,3.54,-5.71,4.21,1.39,-5.79,2.2,163.1,161.4,978.5,-999,0.73,14.28,0.24
+2015-08-15 19:00:00+00:00,497.6,538.6,411.52,-999,-212.91,1.74,-5.71,-999,-5.41,-5.78,-999,-5.44,-4.72,-5.05,83.91,-999,3.41,-6.45,3.91,1.63,-6.49,2.11,165.8,165.3,978.5,-999,0.73,14.02,0.17
+2015-08-15 20:00:00+00:00,394.6,453.2,320.74,-999,-214.18,6.96,-6.94,-999,-6.18,-6.79,-999,-6.22,-6.21,-6.13,88.48,-999,3.36,-8.12,3.83,1.44,-7.92,2.12,167.0,166.3,978.3,-999,0.72,14.1,0.13
+2015-08-15 21:00:00+00:00,298.0,355.6,235.18,-999,-211.53,4.74,-8.47,-999,-7.74,-8.34,-999,-7.55,-7.61,-7.84,88.36,-999,3.8,-9.79,4.18,0.54,-9.68,2.34,160.0,159.1,978.1,-999,0.72,14.04,0.16
+2015-08-15 22:00:00+00:00,140.8,245.4,140.1,-999,-169.18,17.06,-10.93,-999,-9.36,-10.79,-999,-9.17,-10.2,-10.38,90.54,-999,4.2,-13.24,4.94,0.03,-13.17,1.15,156.8,155.4,978.1,-999,0.72,13.93,0.24
+2015-08-15 23:00:00+00:00,60.6,142.6,45.02,-999,-81.89,25.56,-13.03,-999,-12.28,-12.83,-999,-12.05,-12.71,-12.66,94.11,-999,5.03,-14.23,5.65,0.4,-14.01,2.97,156.0,153.9,977.9,-999,0.72,13.75,0.23
+2015-08-16 00:00:00+00:00,5.2,10.0,4.11,-999,-36.29,1.44,-14.62,-999,-13.53,-14.38,-999,-13.29,-14.55,-14.34,97.38,-999,5.29,-15.8,5.9,0.55,-15.55,3.12,159.0,157.6,977.7,-999,0.72,13.58,0.19
+2015-08-16 01:00:00+00:00,1.0,2.0,0.19,-999,-33.63,0.35,-15.65,-999,-15.01,-15.5,-999,-14.83,-15.57,-15.43,99.15,-999,5.8,-17.0,6.79,1.25,-16.85,3.35,158.6,157.7,977.7,-999,0.72,13.47,0.42
+2015-08-16 02:00:00+00:00,0.8,1.4,0.19,-999,-33.43,0.8,-15.74,-999,-14.99,-15.59,-999,-14.85,-15.69,-15.58,99.99,-999,6.18,-17.19,7.17,1.63,-17.03,3.7,162.6,161.8,977.3,-999,0.72,13.37,0.32
+2015-08-16 03:00:00+00:00,0.8,1.4,0.37,-999,-34.44,0.38,-16.07,-999,-15.66,-15.95,-999,-15.54,-15.99,-15.9,99.73,-999,6.69,-17.11,7.59,1.51,-16.98,3.33,164.7,162.9,976.9,-999,0.72,13.28,0.28
+2015-08-16 04:00:00+00:00,0.8,1.4,0.19,-999,-32.01,0.5,-16.43,-999,-15.79,-16.3,-999,-15.67,-16.33,-16.23,98.21,-999,6.22,-17.7,7.27,1.38,-17.59,3.45,166.6,164.4,976.6,-999,0.72,13.2,0.3
+2015-08-16 05:00:00+00:00,0.8,1.4,0.19,-999,-29.52,0.84,-16.95,-999,-16.23,-16.83,-999,-16.1,-16.89,-16.79,95.95,-999,6.17,-18.11,6.97,1.58,-17.98,3.54,160.5,160.0,976.3,-999,0.72,13.1,0.26
+2015-08-16 06:00:00+00:00,0.8,2.0,0.56,-999,-25.33,1.54,-17.09,-999,-16.74,-16.99,-999,-16.64,-17.04,-16.95,94.03,-999,6.25,-18.14,7.02,1.19,-18.04,3.64,163.2,161.6,975.9,-999,0.72,13.04,0.29
+2015-08-16 07:00:00+00:00,17.4,43.0,12.52,-999,-1.52,19.54,-16.9,-999,-16.43,-16.83,-999,-16.34,-16.82,-16.76,92.41,-999,6.16,-18.06,7.07,1.52,-17.95,3.78,161.4,160.0,975.7,-999,0.72,13.04,0.26
+2015-08-16 08:00:00+00:00,96.6,156.0,75.84,-999,70.11,27.17,-15.88,-999,-15.07,-15.83,-999,-15.03,-15.61,-15.57,88.87,-999,6.02,-17.46,6.85,1.9,-17.4,3.7,166.3,164.2,975.4,-999,0.72,13.71,0.34
+2015-08-16 09:00:00+00:00,167.4,246.2,135.8,-999,61.59,37.58,-14.92,-999,-14.35,-14.89,-999,-14.3,-14.59,-14.58,87.4,-999,5.61,-16.22,6.4,1.69,-16.17,3.46,162.6,161.1,975.2,-999,0.72,14.86,0.28
+2015-08-16 10:00:00+00:00,267.0,307.4,227.34,-999,113.43,11.02,-14.29,-999,-13.93,-14.27,-999,-13.88,-13.73,-13.71,84.74,-999,5.45,-15.31,6.35,1.85,-15.3,3.5,166.5,164.1,975.0,-999,0.72,13.83,0.33
+2015-08-16 11:00:00+00:00,373.0,425.8,325.78,-999,100.7,8.3,-13.23,-999,-12.32,-13.23,-999,-12.36,-12.6,-12.54,82.37,-999,4.8,-14.86,5.53,0.93,-14.84,3.18,173.1,172.0,975.0,-999,0.72,13.68,0.31
+2015-08-16 12:00:00+00:00,463.8,548.2,409.84,-999,64.33,7.85,-11.65,-999,-10.48,-11.72,-999,-10.53,-10.95,-10.97,80.47,-999,4.54,-13.14,5.16,0.89,-13.23,2.83,170.6,168.7,974.9,-999,0.72,13.55,0.25
+2015-08-16 13:00:00+00:00,531.6,626.8,464.95,-999,26.86,16.03,-9.31,-999,-8.61,-9.34,-999,-8.68,-8.54,-8.36,77.61,-999,4.08,-10.94,5.05,1.36,-10.98,2.72,188.7,186.1,974.7,-999,0.72,13.49,0.32
+2015-08-16 14:00:00+00:00,581.4,687.8,503.43,-999,-3.01,12.09,-7.96,-999,-7.1,-8.04,-999,-7.19,-7.01,-6.83,77.13,-999,3.5,-9.05,4.73,1.59,-9.1,2.65,207.4,204.7,974.7,-999,0.72,13.46,0.3
+2015-08-16 15:00:00+00:00,618.8,695.8,535.56,-999,-66.41,17.91,-6.5,-999,-5.98,-6.53,-999,-6.0,-5.43,-5.27,76.14,-999,3.27,-7.41,4.25,1.4,-7.48,2.33,226.0,228.8,974.7,-999,0.72,14.42,0.4
+2015-08-16 16:00:00+00:00,532.2,667.0,455.04,-999,-70.9,25.78,-5.36,-999,-4.75,-5.36,-999,-4.82,-4.51,-4.18,84.99,-999,2.97,-6.34,4.49,0.7,-6.31,2.34,240.4,263.9,974.6,-999,0.72,13.8,0.46
+2015-08-16 17:00:00+00:00,566.0,1161.8,470.92,-999,4.18,6.36,-4.72,-999,-4.28,-4.9,-999,-4.42,-4.15,-3.94,93.54,-999,2.49,-5.38,4.45,0.06,-5.55,2.29,254.2,300.5,974.6,-999,0.72,13.81,0.72
+2015-08-16 18:00:00+00:00,454.4,573.4,377.52,-999,5.43,3.1,-4.42,-999,-4.18,-4.53,-999,-4.31,-3.9,-3.68,89.46,-999,1.97,-4.91,3.72,0.1,-5.0,2.41,255.4,309.7,974.7,-999,0.72,14.3,0.62
+2015-08-16 19:00:00+00:00,358.0,450.4,297.01,-999,5.27,1.79,-4.64,-999,-4.26,-4.72,-999,-4.37,-4.19,-3.98,90.46,-999,1.72,-5.11,3.88,0.02,-5.13,1.96,254.9,311.4,974.7,-999,0.72,14.15,0.76
+2015-08-16 20:00:00+00:00,247.4,295.2,204.73,-999,4.2,1.43,-4.6,-999,-4.39,-4.66,-999,-4.44,-4.22,-4.07,90.69,-999,1.2,-5.0,3.39,0.0,-5.02,0.09,252.0,311.8,974.6,-999,0.73,14.04,0.5
+2015-08-16 21:00:00+00:00,140.0,196.4,115.44,-999,1.46,1.82,-4.41,-999,-4.28,-4.43,-999,-4.3,-4.02,-3.96,93.01,-999,0.61,-4.77,1.94,0.38,-4.75,2.02,245.4,312.2,974.6,-999,0.73,14.0,0.43
+2015-08-16 22:00:00+00:00,71.2,115.0,57.91,-999,1.19,1.2,-4.53,-999,-4.39,-4.54,-999,-4.4,-4.08,-4.12,94.73,-999,0.31,-4.83,0.97,0.01,-4.84,0.45,234.7,263.5,974.5,-999,0.73,13.88,0.27
+2015-08-16 23:00:00+00:00,27.6,49.8,22.04,-999,-1.35,1.41,-4.78,-999,-4.16,-4.76,-999,-4.15,-4.53,-4.5,100.49,-999,0.98,-5.2,1.71,0.13,-5.18,1.79,235.2,272.6,974.5,-999,0.73,13.7,0.36
