@@ -44,7 +44,7 @@ setup(
         "Topic :: Software Development :: Libraries :: Python Modules",
         "Operating System :: OS Independent"],
 
-    install_requires=['pandas', 'numpy >= 1.15.2', 'xarray', 'pytz', 'matplotlib', 'netcdf4', 'scipy', 'requests',
+    install_requires=['pandas', 'numpy >= 1.15.2', 'xarray', 'pytz', 'matplotlib', 'netcdf4', 'scipy', 'requests', 'nead',
                       'metpy'],
 
     entry_points = {
